change header, aside

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			<div class="container">
+			<div class="container clearfix">
 				<header class="shop-cart-header">
 					<div class="content">
 						<div class="top-header clearfix">
@@ -43,30 +43,30 @@
 			                      	<a href="#">2 items</a>
 			                	</span>
 		                        <ul class="cart-edit f-right">
-		                            <li class="plus"><a href="#"></a></li>
+		                            <li class="close"><a href="#"></a></li>
 		                            <li><a href="#">edit</a></li>
 		                        </ul>
-		                        <ul class="view-check">
-			                        <li><a href="#">view cart</a></li>
-			                        <li><a href="#">checkout</a></li>
-			                    </ul>
 		                    </div>
+		                    <ul class="view-check">
+			                    <li><a href="#">view cart</a></li>
+			                    <li><a href="#">checkout</a></li>
+			                </ul>
 	                    </div>
 	                    <div class="search">
 	                        <input type="text" value="Search">
-	                        <input type="submit" value="">
+	                        <input class="f-right" type="submit" value="">
 	                    </div>
 					</div>
-	                <div class="yellow-banner">
+	                <!--div class="yellow-banner">
 	                    <h1>welcome to surfhouse</h1>
 	                    <p>The only online store you will ever need for all your windsurfing and kitesurfing and SUP needs</p>
-	                </div>
+	                </div-->
 				</div>
 			</header>
 			<main class="content">
 				<aside class="left-column">
 					<nav class="aside-menu">
-					<span>Menu</span>
+					<h3>Menu</h3>
 						<ul>
 							<li><a href="">About</a></li>
 							<li><a href="">Apparel</a></li>
@@ -82,7 +82,7 @@
 						</ul>
 					</nav>
 					<nav class="aside-menu">
-						<span>Category options</span>
+						<h3>Category options</h3>
 						<ul>
 							<li><a href="">Men</a></li>
 							<li><a href="">Women</a></li>
@@ -92,7 +92,7 @@
 						</ul>
 					</nav>
 					<nav class="aside-menu">
-						<span>Brand options</span>
+						<h3>Brand options</h3>
 						<ul>
 							<li><a href="">Billabong</a></li>
 							<li><a href="">Element</a></li>
@@ -125,12 +125,10 @@
 							<li><a href="">Men</a></li>
 							<li><a href="">Equipment</a></li>
 						</ul>
-						<a href="">view all tags</a>
+						<a class="link-arrow" href="">view all tags</a>
 					</div>
-					<div class="banner">
-						<a href="">
-							<img src="" alt="Banner now is open">
-						</a>
+					<div class="aside-banner">
+						<p>Now is open!</p>
 					</div>
 				</aside>
 				<section class="right-column">
@@ -238,9 +236,6 @@
 						</span>
 					</div>
 				</section>
-				<p>
-					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-				</p>
 			</main>
 		</div>
 		<footer>
