--- a/index.html
+++ b/index.html
@@ -171,40 +171,43 @@
 						<figure class="shop-item">
 							<img src="img/shop-cat-gridx3_19.jpg" alt="">
 							<figcuption>
-								<p>Sleeve spring suit</p>
-								<p>865.00</p>
+								<p class="f-left">Sleeve spring suit</p>
+								<p class="shop-price f-right">865.00</p>
 							</figcuption>
 						</figure>
 
 						<figure class="shop-item">
 							<img src="img/shop-cat-gridx3_19.jpg" alt="">
 							<figcuption>
-								<p>Sleeve spring suit</p>
-								<p>865.00</p>
+								<p class="f-left">Sleeve spring suit</p>
+								<span class="f-right">
+									<p class="shop-price">865.00</p>
+									<p class="shop-price shop-old-price">865.00</p>
+								</span>
 							</figcuption>
 						</figure>
 
 						<figure class="shop-item">
 							<img src="img/shop-cat-gridx3_19.jpg" alt="">
 							<figcuption>
-								<p>Sleeve spring suit</p>
-								<p>865.00</p>
+								<p class="f-left">Sleeve spring suit</p>
+								<p class="shop-price f-right">865.00</p>
 							</figcuption>
 						</figure>
 
 						<figure class="shop-item">
 							<img src="img/shop-cat-gridx3_19.jpg" alt="">
 							<figcuption>
-								<p>Sleeve spring suit</p>
-								<p>865.00</p>
+								<p class="f-left">Sleeve spring suit</p>
+								<p class="shop-price f-right">865.00</p>
 							</figcuption>
 						</figure>
 
 						<figure class="shop-item">
 							<img src="img/shop-cat-gridx3_19.jpg" alt="">
 							<figcuption>
-								<p>Sleeve spring suit</p>
-								<p>865.00</p>
+								<p class="f-left">Sleeve spring suit</p>
+								<p class="shop-price f-right">865.00</p>
 							</figcuption>
 						</figure>
 					</div>
@@ -241,9 +244,9 @@
 		<footer>
 			<div class="footer-top-social content clearfix">
 				<ul>
-					<li><a href="">face</a></li>
-					<li><a href="">face</a></li>
-					<li><a href="">face</a></li>
+					<li><a class="fa fa-facebook" href=""></a></li>
+					<li><a class="fa fa-twitter" href=""></a></li>
+					<li><a class="fa fa-pinterest-p" href=""></a></li>
 				</ul>
 			</div>
 			<div class="info-footer clearfix">
