almost finished page shop-card-grid3

--- a/shop-cat-gridx3.html
+++ b/shop-cat-gridx3.html
@@ -26,7 +26,14 @@
 								<li><a class="fa fa-youtube" href="#"></a></li>
 								<li><a class="fa fa-pinterest-p" href="#"></a></li>
 								<li><a class="fa fa-instagram" href="#"></a></li>
-								<li><a class="" href="#">En</a></li> <!--change-->
+								<li class="language">
+									<span class="arrow-select">
+									<select>
+										<option>En</option>
+										<option>Rus</option>
+									</select>
+								</span>
+								</li>
 							</ul>
 						</div>
 					</div>
@@ -180,7 +187,7 @@
 					<div class="shop clearfix">
 						<figure class="shop-item mark">
 							<a href="#">
-								<img src="img/shop-cat-gridx3_19.jpg" alt="">
+								<img src="img/cart_09.jpg" alt="">
 								<figcuption>
 									<p class="goods-name f-left">Sleeve spring suit</p>
 									<div class="f-right">
@@ -225,7 +232,7 @@
 						</figure>
 						<figure class="shop-item">
 							<a href="#">
-								<img src="img/shop-cat-gridx3_19.jpg" alt="">
+								<img src="img/cart_09.jpg" alt="">
 								<figcuption>
 									<p class="goods-name f-left">Synery 2mm</p>
 									<div class="f-right">
@@ -236,7 +243,7 @@
 						</figure>
 						<figure class="shop-item mark mark-hot">
 							<a href="#">
-								<img src="img/shop-cat-gridx3_19.jpg" alt="">
+								<img src="img/cart_12.jpg" alt="">
 								<figcuption>
 									<p class="goods-name f-left">Surf yoke 19 qs</p>
 									<div class="f-right">
@@ -259,7 +266,7 @@
 						</figure>
 						<figure class="shop-item">
 							<a href="#">
-								<img src="img/shop-cat-gridx3_19.jpg" alt="">
+								<img src="img/cart_12.jpg" alt="">
 								<figcuption>
 									<p class="goods-name f-left">Stripe 19 qs</p>
 									<div class="f-right">
@@ -400,7 +407,7 @@
 			<div class="info-footer">
 				<ul class="content ul-info clearfix">
 					<li class="category">
-						<h3>Category</h3>
+						<h4>Category</h4>
 						<ul>
 							<li><a href="#">Home</a></li>
 							<li><a href="#">About us</a></li>
@@ -412,7 +419,7 @@
 						</ul>
 					</li>
 					<li class="our-account">
-						<h3>Our Account</h3>
+						<h4>Our Account</h4>
 						<ul>
 							<li><a href="#">Your Account</a></li>
 							<li><a href="#">Personal information</a></li>
@@ -424,7 +431,7 @@
 						</ul>
 					</li>
 					<li class="our-support">
-						<h3>Our Support</h3>
+						<h4>Our Support</h4>
 						<ul>
 							<li><a href="#">Site Map</a></li>
 							<li><a href="#">Search Terms</a></li>
@@ -436,9 +443,12 @@
 						</ul>
 					</li>
 					<li class="newsletter">
-						<h3>Newsletter</h3>
-						<p>Join thousanda of other people subscribe to our job.</p>
-						<input type="email" placeholder="insert email" />
+						<h4>Newsletter</h4>
+						<p class="footer-text">Join thousanda of other people subscribe to our job.</p>
+						<div class="footer-email">
+                            <input type="email" value="Insert Email" />
+                            <input type="submit" value="submit" />
+               			 </div>
 						<ul class="pay-card">
 							<li class="american-express"><a href="#"></a></li>
 							<li class="mastercard"><a href="#"></a></li>
@@ -449,24 +459,26 @@
 						</ul>
 					</li>
 					<li class="about-us">
-						<h3>About Us</h3>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
-						<p>Phone: <span>1-999-342-9876</span></p>
-						<p>email: <span>info@surfhouse.com</span></p>
+						<h4>About Us</h4>
+						<p class="footer-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+						<p class="footer-phone">Phone: <a href="tel:1-999-342-9876">1-999-342-9876</a></p>
+						<p class="footer-email">email: <a href="mailto:info@surfhouse.com">info@surfhouse.com</a></p>
 					</li>	
 				</ul>		
 			</div>
-			<div class="copyright">
-				<p>&copy; 2014 <span>Surfhouse.</span> All rights reserved - Designed by theuncreativelab.com</p>
-				<ul class="footer-social clearfix">
-					<li class="facebook"><a href="#"></a></li>
-					<li class="twitter"><a href="#"></a></li>
-					<li class="printerest"><a href="#"></a></li>
-					<li class="gplusk"><a href="#"></a></li>
-					<li class="t"><a href="#"></a></li>
-					<li class="instagram"><a href="#"></a></li>
-					<li class="p"><a href="#"></a></li>
-				</ul>
+			<div class="copyright clearfix">
+				<div class="content">
+					<p class="f-left"><span>&copy; 2014 Surfhouse.</span> All rights reserved - Designed by theuncreativelab.com</p>
+					<ul class="footer-social f-right">
+						<li><a class="fa fa-facebook" href="#"></a></li>
+						<li><a class="fa fa-twitter" href="#"></a></li>
+						<li><a class="fa fa-pinterest-p" href="#"></a></li>
+						<li><a class="fa fa-google-plus" href="#"></a></li>
+						<li><a class="fa fa-tumblr" href="#"></a></li>
+						<li><a class="fa fa-instagram" href="#"></a></li>
+						<li><a class="fa fa-rss" href="#"></a></li>
+					</ul>
+				</div>
 			</div>	
 		</footer>
 	</div>
