--- a/shop-cat-gridx3.html
+++ b/shop-cat-gridx3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>SurfHouse</title>
+		<title>Shop cart grid3</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.0.3/css/font-awesome.min.css">
@@ -64,10 +64,6 @@
 	                        <input class="f-right" type="submit" value="">
 	                    </div>
 					</div>
-	                <!--div class="yellow-banner">
-	                    <h1>welcome to surfhouse</h1>
-	                    <p>The only online store you will ever need for all your windsurfing and kitesurfing and SUP needs</p>
-	                </div-->
 				</div>
 			</header>
 			<main class="content">
@@ -111,7 +107,7 @@
 							<li><a href="#">Jackss</a></li>
 						</ul>
 					</nav>
-					<div class="tags-widget">
+					<div class="aside-block tags-widget">
 						<h3>Tags Widget</h3>
 						<ul>
 							<li><a href="#">Kitesurf</a></li>
@@ -138,7 +134,7 @@
 						<p>Now is open!</p>
 					</a>
 				</aside>
-				<section class="right-column">
+				<section class="right-column content-column">
 					<div class="breadcrumbs clearfix">
 						<ul class="breadcrumbs-list f-left">
 							<li><a href="#">Home</a></li>
