almost finished page home

--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 	<body>
 		<div class="wrapper">
 			<div class="container clearfix">
-				<header class="header-home">
+				<header class="header header-home">
 					<div class="content">
 						<div class="top-header clearfix">
 						<div class="left-column">
@@ -71,238 +71,262 @@
 				</div>
 			</header>
 			<main class="content negative-position">
-				<aside class="left-column">
-					<nav class="aside-menu">
-					<h3>Menu</h3>
-						<ul>
-							<li><a href="#">About</a></li>
-							<li><a href="#">Apparel</a></li>
-							<li><a href="#">Surf Appare</a></li>
-							<li><a href="#">Windsurf</a></li>
-							<li><a href="#">Kitesurf</a></li>
-							<li><a href="#">Accessories</a></li>
-							<li><a href="#">Sale</a></li>
-							<li><a href="#">Brands</a></li>
-							<li><a href="#">Blog</a></li>
-							<li><a href="#">Gadgets</a></li>
-							<li><a href="#">Contact</a></li>
-						</ul>
-					</nav>
-					<a href="#" class="aside-banner">
-						<p>Now is open!</p>
-					</a>
-					<div class="aside-block tags-widget">
-						<h3>Tags Widget</h3>
-						<ul>
-							<li><a href="#">Kitesurf</a></li>
-							<li><a href="#">Super</a></li>
-							<li><a href="#">Duper</a></li>
-							<li><a href="#">Theme</a></li>
-							<li><a href="#">Men</a></li>
-							<li><a href="#">Women</a></li>
-							<li><a href="#">Equipment</a></li>
-							<li><a href="#">Best</a></li>
-							<li><a href="#">Accessories</a></li>
-							<li><a href="#">Men</a></li>
-							<li><a href="#">Apparel</a></li>
-							<li><a href="#">Super</a></li>
-							<li><a href="#">Duper</a></li>
-							<li><a href="#">Theme</a></li>
-							<li><a href="#">Responsiv</a></li>
-							<li><a href="#">Men</a></li>
-							<li><a href="#">Equipment</a></li>
-						</ul>
-						<a class="link-arrow" href="#">view all tags</a>
-					</div>
-					<div class="aside-block articles-experts">
-						<h3>Articles Experts</h3>
-						<ul>
-							<li><a href="">LG Spectrum review</a></li>
-							<li><a href="">Verizon Droid Xyboard 8.2 and 10.1 review</a></li>
-							<li><a href="">Mac mini review (mid 2011)</a></li>
-							<li><a href="">Wacom Inkling review</a></li>
-							<li><a href="">Sonos Play:3 review</a></li>
-							<li><a href="">HTC Radar 4G review</a></li>
-							<li><a href="">Canon PowerShot S100</a></li>
-							<li><a href="">Apple iMac</a></li>
-						</ul>
-						<a class="link-arrow" href="#">view all tags</a>
-					</div>
-				</aside>
-				<section class="right-column content-column">
-					<section class="shop-products">						
-						<div class="shop clearfix">
-							<div class="clearfix">
-								<h2 class="f-left">New products</h2>
-								<ul class="shop-slider-arrow f-right">
-									<li><a class="fa fa-angle-left" href=""></a></li>
-									<li><a class="fa fa-angle-right" href=""></a></li>
-								</ul>
-							</div>
-							<figure class="shop-item mark">
-								<a href="#">
-									<img src="img/cart_09.jpg" alt="">
-									<figcuption>
-										<p class="goods-name f-left">Sleeve spring suit</p>
-										<div class="f-right">
-											<p class="shop-price f-right">865.00</p>
-										</div>
-									</figcuption>
-								</a>
-							</figure>
-							<figure class="shop-item mark mark-hot">
-								<a href="#">
-									<img src="img/shop-cat-gridx3_19.jpg" alt="">
-									<figcuption>
-										<p class="goods-name f-left">Salty dayz</p>
-										<div class="f-right">
-											<p class="shop-price">770.50</p>
-											<p class="shop-price shop-old-price">1,270,15</p>
-										</div>
-									</figcuption>
-								</a>
-							</figure>
-							<figure class="shop-item">
-								<a href="#">
-									<img src="img/shop-cat-gridx3_19.jpg" alt="">
-									<figcuption>
-										<p class="goods-name f-left">Cheeky jane</p>
-										<div class="f-right">
-											<p class="shop-price">280.70</p>
-										</div>
-									</figcuption>
-								</a>
-							</figure>
-							<figure class="shop-item">
-								<a href="#">
-									<img src="img/shop-cat-gridx3_19.jpg" alt="">
-									<figcuption>
-										<p class="goods-name f-left">Synergy 2mm back zip</p>
-										<div class="f-right">
-											<p class="shop-price">765.00</p>
-										</div>
-									</figcuption>
-								</a>
-							</figure>
-							<figure class="shop-item">
-								<a href="#">
-									<img src="img/cart_09.jpg" alt="">
-									<figcuption>
-										<p class="goods-name f-left">Synery 2mm</p>
-										<div class="f-right">
-											<p class="shop-price">230.50</p>
-										</div>
-									</figcuption>
-								</a>
-							</figure>
-							<figure class="shop-item mark mark-hot">
-								<a href="#">
-									<img src="img/cart_12.jpg" alt="">
-									<figcuption>
-										<p class="goods-name f-left">Surf yoke 19 qs</p>
-										<div class="f-right">
-											<p class="shop-price">330.70</p>
-											<p class="shop-price shop-old-price">1,270,15</p>
-										</div>
-									</figcuption>
-								</a>
-							</figure>
+				<section class="main-content clearfix">
+					<aside class="left-column">
+						<nav class="aside-menu">
+						<h3>Menu</h3>
+							<ul>
+								<li><a href="#">About</a></li>
+								<li><a href="#">Apparel</a></li>
+								<li><a href="#">Surf Appare</a></li>
+								<li><a href="#">Windsurf</a></li>
+								<li><a href="#">Kitesurf</a></li>
+								<li><a href="#">Accessories</a></li>
+								<li><a href="#">Sale</a></li>
+								<li><a href="#">Brands</a></li>
+								<li><a href="#">Blog</a></li>
+								<li><a href="#">Gadgets</a></li>
+								<li><a href="#">Contact</a></li>
+							</ul>
+						</nav>
+						<a href="#" class="aside-banner">
+							<p>Now is open!</p>
+						</a>
+						<div class="aside-block tags-widget">
+							<h3>Tags Widget</h3>
+							<ul>
+								<li><a href="#">Kitesurf</a></li>
+								<li><a href="#">Super</a></li>
+								<li><a href="#">Duper</a></li>
+								<li><a href="#">Theme</a></li>
+								<li><a href="#">Men</a></li>
+								<li><a href="#">Women</a></li>
+								<li><a href="#">Equipment</a></li>
+								<li><a href="#">Best</a></li>
+								<li><a href="#">Accessories</a></li>
+								<li><a href="#">Men</a></li>
+								<li><a href="#">Apparel</a></li>
+								<li><a href="#">Super</a></li>
+								<li><a href="#">Duper</a></li>
+								<li><a href="#">Theme</a></li>
+								<li><a href="#">Responsiv</a></li>
+								<li><a href="#">Men</a></li>
+								<li><a href="#">Equipment</a></li>
+							</ul>
+							<a class="link-arrow" href="#">view all tags</a>
 						</div>
-					</section>
-					<section class="top-products">
-						<div class="shop clearfix">
-							<div class="clearfix">
-								<h2 class="f-left">Top products</h2>
-								<ul class="shop-slider-arrow f-right">
-									<li><a class="fa fa-angle-left" href=""></a></li>
-									<li><a class="fa fa-angle-right" href=""></a></li>
-								</ul>
-							</div>
-							<figure class="shop-item mark">
-								<a href="#">
-									<img src="img/cart_09.jpg" alt="">
-									<figcuption>
-										<p class="goods-name f-left">Sleeve spring suit</p>
-										<div class="f-right">
-											<p class="shop-price f-right">865.00</p>
-										</div>
-									</figcuption>
-								</a>
-							</figure>
-							<figure class="shop-item mark mark-hot">
-								<a href="#">
-									<img src="img/shop-cat-gridx3_19.jpg" alt="">
-									<figcuption>
-										<p class="goods-name f-left">Salty dayz</p>
-										<div class="f-right">
-											<p class="shop-price">770.50</p>
-											<p class="shop-price shop-old-price">1,270,15</p>
-										</div>
-									</figcuption>
-								</a>
-							</figure>
-							<figure class="shop-item">
-								<a href="#">
-									<img src="img/shop-cat-gridx3_19.jpg" alt="">
-									<figcuption>
-										<p class="goods-name f-left">Cheeky jane</p>
-										<div class="f-right">
-											<p class="shop-price">280.70</p>
-										</div>
-									</figcuption>
-								</a>
-							</figure>
+						<div class="aside-block articles-experts">
+							<h3>Articles Experts</h3>
+							<ul>
+								<li><a href="#">LG Spectrum review</a></li>
+								<li><a href="#">Verizon Droid Xyboard 8.2 and 10.1 review</a></li>
+								<li><a href="#">Mac mini review (mid 2011)</a></li>
+								<li><a href="#">Wacom Inkling review</a></li>
+								<li><a href="#">Sonos Play:3 review</a></li>
+								<li><a href="#">HTC Radar 4G review</a></li>
+								<li><a href="#">Canon PowerShot S100</a></li>
+								<li><a href="#">Apple iMac</a></li>
+							</ul>
+							<a class="link-arrow" href="#">view all tags</a>
 						</div>
-					</section>
-					<section class="sale-products">
-						<div class="shop clearfix">
-							<div class="clearfix">
-								<h2 class="f-left">Sale products</h2>
-								<ul class="shop-slider-arrow f-right">
-									<li><a class="fa fa-angle-left" href=""></a></li>
-									<li><a class="fa fa-angle-right" href=""></a></li>
-								</ul>
+					</aside>
+					<section class="right-column content-column">
+						<section class="shop-products">						
+							<div class="shop clearfix">
+								<div class="clearfix">
+									<h2 class="f-left">New products</h2>
+									<ul class="shop-slider-arrow f-right">
+										<li><a class="fa fa-angle-left" href="#"></a></li>
+										<li><a class="fa fa-angle-right" href="#"></a></li>
+									</ul>
+								</div>
+								<figure class="shop-item mark">
+									<a href="#">
+										<img src="img/cart_09.jpg" alt="">
+										<figcuption>
+											<p class="goods-name f-left">Sleeve spring suit</p>
+											<div class="f-right">
+												<p class="shop-price f-right">865.00</p>
+											</div>
+										</figcuption>
+									</a>
+								</figure>
+								<figure class="shop-item mark mark-hot">
+									<a href="#">
+										<img src="img/shop-cat-gridx3_19.jpg" alt="">
+										<figcuption>
+											<p class="goods-name f-left">Salty dayz</p>
+											<div class="f-right">
+												<p class="shop-price">770.50</p>
+												<p class="shop-price shop-old-price">1,270,15</p>
+											</div>
+										</figcuption>
+									</a>
+								</figure>
+								<figure class="shop-item">
+									<a href="#">
+										<img src="img/shop-cat-gridx3_19.jpg" alt="">
+										<figcuption>
+											<p class="goods-name f-left">Cheeky jane</p>
+											<div class="f-right">
+												<p class="shop-price">280.70</p>
+											</div>
+										</figcuption>
+									</a>
+								</figure>
+								<figure class="shop-item">
+									<a href="#">
+										<img src="img/shop-cat-gridx3_19.jpg" alt="">
+										<figcuption>
+											<p class="goods-name f-left">Synergy 2mm back zip</p>
+											<div class="f-right">
+												<p class="shop-price">765.00</p>
+											</div>
+										</figcuption>
+									</a>
+								</figure>
+								<figure class="shop-item">
+									<a href="#">
+										<img src="img/cart_09.jpg" alt="">
+										<figcuption>
+											<p class="goods-name f-left">Synery 2mm</p>
+											<div class="f-right">
+												<p class="shop-price">230.50</p>
+											</div>
+										</figcuption>
+									</a>
+								</figure>
+								<figure class="shop-item mark mark-hot">
+									<a href="#">
+										<img src="img/cart_12.jpg" alt="">
+										<figcuption>
+											<p class="goods-name f-left">Surf yoke 19 qs</p>
+											<div class="f-right">
+												<p class="shop-price">330.70</p>
+												<p class="shop-price shop-old-price">1,270,15</p>
+											</div>
+										</figcuption>
+									</a>
+								</figure>
 							</div>
-							<figure class="shop-item mark">
-								<a href="#">
-									<img src="img/cart_09.jpg" alt="">
-									<figcuption>
-										<p class="goods-name f-left">Sleeve spring suit</p>
-										<div class="f-right">
-											<p class="shop-price f-right">865.00</p>
-										</div>
-									</figcuption>
-								</a>
-							</figure>
-							<figure class="shop-item mark mark-hot">
-								<a href="#">
-									<img src="img/shop-cat-gridx3_19.jpg" alt="">
-									<figcuption>
-										<p class="goods-name f-left">Salty dayz</p>
-										<div class="f-right">
-											<p class="shop-price">770.50</p>
-											<p class="shop-price shop-old-price">1,270,15</p>
-										</div>
-									</figcuption>
-								</a>
-							</figure>
-							<figure class="shop-item">
-								<a href="#">
-									<img src="img/shop-cat-gridx3_19.jpg" alt="">
-									<figcuption>
-										<p class="goods-name f-left">Cheeky jane</p>
-										<div class="f-right">
-											<p class="shop-price">280.70</p>
-										</div>
-									</figcuption>
-								</a>
-							</figure>
-						</div>
+						</section>
+						<section class="top-products">
+							<div class="shop clearfix">
+								<div class="clearfix">
+									<h2 class="f-left">Top products</h2>
+									<ul class="shop-slider-arrow f-right">
+										<li><a class="fa fa-angle-left" href="#"></a></li>
+										<li><a class="fa fa-angle-right" href="#"></a></li>
+									</ul>
+								</div>
+								<figure class="shop-item mark">
+									<a href="#">
+										<img src="img/cart_09.jpg" alt="">
+										<figcuption>
+											<p class="goods-name f-left">Sleeve spring suit</p>
+											<div class="f-right">
+												<p class="shop-price f-right">865.00</p>
+											</div>
+										</figcuption>
+									</a>
+								</figure>
+								<figure class="shop-item mark mark-hot">
+									<a href="#">
+										<img src="img/shop-cat-gridx3_19.jpg" alt="">
+										<figcuption>
+											<p class="goods-name f-left">Salty dayz</p>
+											<div class="f-right">
+												<p class="shop-price">770.50</p>
+												<p class="shop-price shop-old-price">1,270,15</p>
+											</div>
+										</figcuption>
+									</a>
+								</figure>
+								<figure class="shop-item">
+									<a href="#">
+										<img src="img/shop-cat-gridx3_19.jpg" alt="">
+										<figcuption>
+											<p class="goods-name f-left">Cheeky jane</p>
+											<div class="f-right">
+												<p class="shop-price">280.70</p>
+											</div>
+										</figcuption>
+									</a>
+								</figure>
+							</div>
+						</section>
+						<section class="sale-products">
+							<div class="shop clearfix">
+								<div class="clearfix">
+									<h2 class="f-left">Sale products</h2>
+									<ul class="shop-slider-arrow f-right">
+										<li><a class="fa fa-angle-left" href="#"></a></li>
+										<li><a class="fa fa-angle-right" href="#"></a></li>
+									</ul>
+								</div>
+								<figure class="shop-item mark">
+									<a href="#">
+										<img src="img/cart_09.jpg" alt="">
+										<figcuption>
+											<p class="goods-name f-left">Sleeve spring suit</p>
+											<div class="f-right">
+												<p class="shop-price f-right">865.00</p>
+											</div>
+										</figcuption>
+									</a>
+								</figure>
+								<figure class="shop-item mark mark-hot">
+									<a href="#">
+										<img src="img/shop-cat-gridx3_19.jpg" alt="">
+										<figcuption>
+											<p class="goods-name f-left">Salty dayz</p>
+											<div class="f-right">
+												<p class="shop-price">770.50</p>
+												<p class="shop-price shop-old-price">1,270,15</p>
+											</div>
+										</figcuption>
+									</a>
+								</figure>
+								<figure class="shop-item">
+									<a href="#">
+										<img src="img/shop-cat-gridx3_19.jpg" alt="">
+										<figcuption>
+											<p class="goods-name f-left">Cheeky jane</p>
+											<div class="f-right">
+												<p class="shop-price">280.70</p>
+											</div>
+										</figcuption>
+									</a>
+								</figure>
+							</div>
+						</section>
 					</section>
 				</section>
+				<section class="brands">
+					<ul>
+						<li><a class="brand brand-billa" href="#"></a></li>
+						<li><a class="brand brand-element" href="#"></a></li>
+						<li><a class="brand brand-oneil" href="#"></a></li>
+						<li><a class="brand brand-oakley" href="#"></a></li>
+						<li><a class="brand brand-quiksilver" href="#"></a></li>
+						<li><a class="brand brand-reef" href="#"></a></li>
+						<li><a class="brand brand-ripcurl" href="#"></a></li>
+					</ul>
+				</section>
+				<section class="insta-block">
+		            <h3>Instagram feed:<span> #surfhouse </span></h3>
+		            <ul>
+		                <li><a href="#"><img src="img/home_13.jpg" alt=""></a></li>
+		                <li><a href="#"><img src="img/home_13.jpg" alt=""></a></li>
+		                <li><a href="#"><img src="img/home_13.jpg" alt=""></a></li>
+		                <li><a href="#"><img src="img/home_13.jpg" alt=""></a></li>
+		                <li><a href="#"><img src="img/home_13.jpg" alt=""></a></li>
+		                <li><a href="#"><img src="img/home_13.jpg" alt=""></a></li>
+		            </ul>
+		        </section>
 			</main>
 		</div>
-		<footer>
+		<footer class="footer">
 			<div class="footer-top-social content clearfix">
 				<ul>
 					<li><a class="fa fa-facebook" href="#"></a></li>
