--- a/productpage.html
+++ b/productpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Shop cart grid3</title>
+		<title>Productpage</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.0.3/css/font-awesome.min.css">
@@ -143,42 +143,29 @@
 						</ul>
 						<a class="back-previos f-right" href="#">Back to previos page</a>
 					</div>
-					<div class="filter clearfix">
-						<div class="sort-by">
-							Sort by
-							<span class="arrow-select">
-								<select>
-									<option>Position</option>
-									<option>Position 2</option>
-								</select>
-							</span>
-							<span class="fa fa-long-arrow-up"></span>
-						</div>
-						<div class="view">
-							View as:
-							<ul>
-								<li class="view-block"><a href="#"></a></li>
-								<li class="view-list"><a href="#"></a></li>
-							</ul>
-						</div>
-						<div class="show-page">
-							Show
-							<span class="arrow-select">
-								<select>
-									<option>9</option>
-									<option>8</option>
-								</select>
-							</span>
-							per page
-						</div>
-						<div class="page">
-							Page:
-							<ul>
-								<li class="active page-number"><a href="#">1</a></li>
-								<li class="page-number"><a href="#">2</a></li>
-								<li class="next"><a class="fa fa-angle-right" href="#"></a></li>
-							</ul>
-						</div>
+					<div class="product-info">
+						<div class="product-tabbar">
+			             	<ul>
+				                <li><a href="#">Product description</a></li>
+				                <li><a href="#">Additional information</a></li>
+				                <li><a href="#">Reviews</a></li>
+				                <li><a href="#">Product tags</a></li>
+			            	</ul>
+			            </div>
+            			<div class="product-tab">
+            				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words 
+							which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the 
+							middle of text.
+
+							There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words 
+							which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the 
+							middle of text.
+							- 6.1 oz. 100% preshrunk heavyweight cotton
+							- Shoulder-to-shoulder taping
+							- Double-needle sleeves and bottom hem
+
+							It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable.</p> 
+            			</div>
 					</div>
 					<div class="shop clearfix">
 						<figure class="shop-item mark">
@@ -215,40 +202,7 @@
 								</figcuption>
 							</a>
 						</figure>
-						<figure class="shop-item">
-							<a href="#">
-								<img src="img/shop-cat-gridx3_19.jpg" alt="">
-								<figcuption>
-									<p class="goods-name f-left">Synergy 2mm back zip</p>
-									<div class="f-right">
-										<p class="shop-price">765.00</p>
-									</div>
-								</figcuption>
-							</a>
-						</figure>
-						<figure class="shop-item">
-							<a href="#">
-								<img src="img/cart_09.jpg" alt="">
-								<figcuption>
-									<p class="goods-name f-left">Synery 2mm</p>
-									<div class="f-right">
-										<p class="shop-price">230.50</p>
-									</div>
-								</figcuption>
-							</a>
-						</figure>
-						<figure class="shop-item mark mark-hot">
-							<a href="#">
-								<img src="img/cart_12.jpg" alt="">
-								<figcuption>
-									<p class="goods-name f-left">Surf yoke 19 qs</p>
-									<div class="f-right">
-										<p class="shop-price">330.70</p>
-										<p class="shop-price shop-old-price">1,270,15</p>
-									</div>
-								</figcuption>
-							</a>
-						</figure>
+						
 						<figure class="shop-item">
 							<a href="#">
 								<img src="img/shop-cat-gridx3_19.jpg" alt="">
@@ -281,113 +235,7 @@
 									</div>
 								</figcuption>
 							</a>
-							</figure>
-						<figure class="shop-item">
-							<a href="#">
-								<img src="img/shop-cat-gridx3_19.jpg" alt="">
-								<figcuption>
-									<p class="goods-name f-left">Oq scallop solid</p>
-									<div class="f-right">
-										<p class="shop-price">765.00</p>
-									</div>
-								</figcuption>
-							</a>
-						</figure>
-						<figure class="shop-item mark mark-hot">
-							<a href="#">
-								<img src="img/shop-cat-gridx3_19.jpg" alt="">
-								<figcuption>
-									<p class="goods-name f-left">Stripe 19 qs</p>
-									<div class="f-right">
-										<p class="shop-price">230.50</p>
-										<p class="shop-price shop-old-price">1,270,15</p>
-									</div>
-								</figcuption>
-							</a>
-						</figure>
-						<figure class="shop-item mark">
-							<a href="#">
-								<img src="img/shop-cat-gridx3_19.jpg" alt="">
-								<figcuption>
-									<p class="goods-name f-left">Yoke 19 qs</p>
-									<div class="f-right">
-										<p class="shop-price">1.130.70</p>
-										<p class="shop-price shop-old-price">1,270,15</p>
-									</div>
-								</figcuption>
-							</a>
-						</figure>
-						<figure class="shop-item mark mark-hot">
-							<a href="#">
-								<img src="img/shop-cat-gridx3_19.jpg" alt="">
-								<figcuption>
-									<p class="goods-name f-left">Oq scallop solid</p>
-									<div class="f-right">
-										<p class="shop-price">765.00</p>
-										<p class="shop-price shop-old-price">1,270,15</p>
-									</div>
-								</figcuption>
-							</a>
-						</figure>
-						<figure class="shop-item">
-							<a href="#">
-								<img src="img/shop-cat-gridx3_19.jpg" alt="">
-								<figcuption>
-									<p class="goods-name f-left">Stripe 19 qs</p>
-									<div class="f-right">
-										<p class="shop-price">230.50</p>
-									</div>
-								</figcuption>
-							</a>
-						</figure>
-						<figure class="shop-item">
-							<a href="#">
-								<img src="img/shop-cat-gridx3_19.jpg" alt="">
-								<figcuption>
-									<p class="goods-name f-left">Yoke 19 qs</p>
-									<div class="f-right">
-										<p class="shop-price">1.130.70</p>
-									</div>
-								</figcuption>
-							</a>
-						</figure>
-					</div>
-					<div class="filter clearfix">
-						<div class="sort-by">
-							Sort by
-							<span class="arrow-select">
-								<select>
-									<option>Position</option>
-									<option>Position 2</option>
-								</select>
-							</span>
-							<span class="fa fa-long-arrow-up"></span>
-						</div>
-						<div class="view">
-							View as:
-							<ul>
-								<li class="view-block"><a href="#"></a></li>
-								<li class="view-list"><a href="#"></a></li>
-							</ul>
-						</div>
-						<div class="show-page">
-							Show
-							<span class="arrow-select">
-								<select>
-									<option>9</option>
-									<option>8</option>
-								</select>
-							</span>
-							per page
-						</div>
-						<div class="page">
-							Page:
-							<ul>
-								<li class="active page-number"><a href="#">1</a></li>
-								<li class="page-number"><a href="#">2</a></li>
-								<li class="next"><a class="fa fa-angle-right" href="#"></a></li>
-							</ul>
-						</div>
+						</figure>						
 					</div>
 				</section>
 			</main>
